// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getArrowStyles Get a correct arrow hover styles with background, shadow and border custom colors 1`] = `
Object {
  " .maxi-container-arrow": Object {
    "shadow": Object {
      "general": Object {
        "filter": "drop-shadow(0px 0px 0px rgba(var(--maxi-light-color-2), 0.2))",
      },
    },
  },
  " .maxi-container-arrow .maxi-container-arrow--content:after": Object {
    "background": Object {
      "general": Object {
        "background-color": "rgba(var(--maxi-light-color-5), 1)",
      },
      "label": "Arrow Color",
    },
  },
  " .maxi-container-arrow .maxi-container-arrow--content:before": Object {
    "border": Object {
      "general": Object {
        "background": "rgba(var(--maxi-light-color-4), 0.2)",
      },
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  " .maxi-container-arrow:before": Object {
    "background": Object {
      "general": Object {
        "background-color": "rgba(var(--maxi-light-color-5), 1)",
      },
      "label": "Arrow Color",
    },
    "border": Object {
      "general": Object {
        "border-bottom-color": "rgba(var(--maxi-light-color-4), 0.2)",
        "border-left-color": "rgba(var(--maxi-light-color-4), 0.2)",
        "border-right-color": "rgba(var(--maxi-light-color-4), 0.2)",
        "border-top-color": "rgba(var(--maxi-light-color-4), 0.2)",
      },
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  ":hover .maxi-container-arrow": Object {
    "shadow": Object {
      "general": Object {
        "filter": "drop-shadow(1px 2px 1px rgba(61,133,209))",
      },
    },
  },
  ":hover .maxi-container-arrow .maxi-container-arrow--content:after": Object {
    "background": Object {
      "general": Object {
        "background-color": "rgba(var(--maxi-light-color-1), 1)",
      },
      "label": "Arrow Color",
    },
  },
  ":hover .maxi-container-arrow .maxi-container-arrow--content:before": Object {
    "border": Object {
      "general": Object {
        "background": "rgba(150,200,90)",
        "height": "calc(50% + 6px)",
        "left": "calc(1.5px)",
        "top": "calc(1.5px)",
        "width": "calc(50% + 6px)",
      },
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  ":hover .maxi-container-arrow:before": Object {
    "border": Object {
      "general": Object {
        "border-bottom-color": "rgba(150,200,90)",
        "border-bottom-left-radius": "4px",
        "border-bottom-right-radius": "3px",
        "border-bottom-style": "solid",
        "border-bottom-width": "3px",
        "border-left-color": "rgba(150,200,90)",
        "border-left-style": "solid",
        "border-left-width": "4px",
        "border-right-color": "rgba(150,200,90)",
        "border-right-style": "solid",
        "border-right-width": "2px",
        "border-top-color": "rgba(150,200,90)",
        "border-top-left-radius": "1px",
        "border-top-right-radius": "2px",
        "border-top-style": "solid",
        "border-top-width": "1px",
        "left": "-4px",
        "top": "-1px",
      },
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
}
`;

exports[`getArrowStyles Get a correct arrow styles 1`] = `
Object {
  " .maxi-container-arrow": Object {
    "shadow": Object {},
  },
  " .maxi-container-arrow .maxi-container-arrow--content": Object {
    "arrow": Object {
      "general": Object {
        "display": "block",
        "height": "2px",
        "left": "1%",
        "top": "-1.4142135623730951px",
        "width": "2px",
      },
      "l": Object {
        "display": "block",
        "height": "1px",
        "left": "4%",
        "top": "-0.7071067811865476px",
        "width": "1px",
      },
      "m": Object {
        "display": "block",
        "height": "3px",
        "left": "2%",
        "top": "calc(100% + 3px)",
        "width": "3px",
      },
      "s": Object {
        "display": "block",
        "height": "1px",
        "left": "4%",
        "top": "calc(100% + 1px)",
        "width": "1px",
      },
      "xl": Object {
        "display": "block",
        "height": "3px",
        "left": "2%",
        "top": "-2.121320343559643px",
        "width": "3px",
      },
      "xs": Object {
        "display": "block",
        "height": "3px",
        "left": "2%",
        "top": "calc(100% + 3px)",
        "width": "3px",
      },
      "xxl": Object {
        "display": "block",
        "height": "1px",
        "left": "4%",
        "top": "-0.7071067811865476px",
        "width": "1px",
      },
    },
  },
  " .maxi-container-arrow .maxi-container-arrow--content:after": Object {
    "background": Object {
      "general": Object {
        "background-color": "rgb(255, 99, 71)",
      },
      "label": "Arrow Color",
    },
  },
  " .maxi-container-arrow .maxi-container-arrow--content:before": Object {
    "border": Object {
      "general": Object {
        "background": "rgba(var(--maxi-light-color-4), 1)",
        "height": "calc(50% + 2px)",
        "left": "calc(0.5px)",
        "top": "calc(0.5px)",
        "width": "calc(50% + 2px)",
      },
      "l": Object {},
      "m": Object {
        "background": "rgba(61,133,209)",
        "height": "calc(50% + 6px)",
        "left": "calc(1.5px)",
        "top": "calc(1.5px)",
        "width": "calc(50% + 6px)",
      },
      "s": Object {
        "height": "50%",
        "left": 0,
        "top": 0,
        "width": "50%",
      },
      "xl": Object {},
      "xs": Object {
        "height": "50%",
        "left": 0,
        "top": 0,
        "width": "50%",
      },
      "xxl": Object {},
    },
  },
  " .maxi-container-arrow:before": Object {
    "background": Object {
      "general": Object {
        "background-color": "rgb(255, 99, 71)",
      },
      "label": "Arrow Color",
    },
    "border": Object {
      "general": Object {
        "border-bottom-color": "rgba(var(--maxi-light-color-4), 1)",
        "border-bottom-style": "solid",
        "border-bottom-width": "1px",
        "border-left-color": "rgba(var(--maxi-light-color-4), 1)",
        "border-left-style": "solid",
        "border-left-width": "1px",
        "border-right-color": "rgba(var(--maxi-light-color-4), 1)",
        "border-right-style": "solid",
        "border-right-width": "1px",
        "border-top-color": "rgba(var(--maxi-light-color-4), 1)",
        "border-top-style": "solid",
        "border-top-width": "1px",
        "left": "-1px",
        "top": "-1px",
      },
      "l": Object {},
      "m": Object {
        "border-bottom-color": "rgba(61,133,209)",
        "border-bottom-style": "solid",
        "border-bottom-width": "3px",
        "border-left-color": "rgba(61,133,209)",
        "border-left-style": "solid",
        "border-left-width": "3px",
        "border-right-color": "rgba(61,133,209)",
        "border-right-style": "solid",
        "border-right-width": "3px",
        "border-top-color": "rgba(61,133,209)",
        "border-top-style": "solid",
        "border-top-width": "3px",
        "left": "-3px",
        "top": "-3px",
      },
      "s": Object {
        "border-bottom-style": "none",
        "border-bottom-width": "",
        "border-left-style": "none",
        "border-left-width": "",
        "border-right-style": "none",
        "border-right-width": "",
        "border-top-style": "none",
        "border-top-width": "",
        "left": 0,
        "top": 0,
      },
      "xl": Object {},
      "xs": Object {
        "border-bottom-style": "none",
        "border-bottom-width": "",
        "border-left-style": "none",
        "border-left-width": "",
        "border-right-style": "none",
        "border-right-width": "",
        "border-top-style": "none",
        "border-top-width": "",
        "left": 0,
        "top": 0,
      },
      "xxl": Object {},
    },
  },
}
`;

exports[`getArrowStyles Get a correct palette colors arrow hover styles 1`] = `
Object {
  " .maxi-container-arrow": Object {
    "shadow": Object {
      "general": Object {
        "filter": "drop-shadow(0px 0px 0px rgba(var(--maxi-light-color-2), 0.2))",
      },
    },
  },
  " .maxi-container-arrow .maxi-container-arrow--content:after": Object {
    "background": Object {
      "general": Object {
        "background-color": "rgba(var(--maxi-light-color-5), 1)",
      },
      "label": "Arrow Color",
    },
  },
  " .maxi-container-arrow .maxi-container-arrow--content:before": Object {
    "border": Object {
      "general": Object {
        "background": "rgba(var(--maxi-light-color-4), 0.2)",
      },
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  " .maxi-container-arrow:before": Object {
    "background": Object {
      "general": Object {
        "background-color": "rgba(var(--maxi-light-color-5), 1)",
      },
      "label": "Arrow Color",
    },
    "border": Object {
      "general": Object {
        "border-bottom-color": "rgba(var(--maxi-light-color-4), 0.2)",
        "border-left-color": "rgba(var(--maxi-light-color-4), 0.2)",
        "border-right-color": "rgba(var(--maxi-light-color-4), 0.2)",
        "border-top-color": "rgba(var(--maxi-light-color-4), 0.2)",
      },
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  ":hover .maxi-container-arrow": Object {
    "shadow": Object {
      "general": Object {
        "filter": "drop-shadow(1px 2px 1px rgba(var(--maxi-light-color-4), 0.2))",
      },
    },
  },
  ":hover .maxi-container-arrow .maxi-container-arrow--content:after": Object {
    "background": Object {
      "general": Object {
        "background-color": "rgba(var(--maxi-light-color-1), 1)",
      },
      "label": "Arrow Color",
    },
  },
  ":hover .maxi-container-arrow .maxi-container-arrow--content:before": Object {
    "border": Object {
      "general": Object {
        "background": "rgba(var(--maxi-light-color-1), 0.2)",
        "height": "calc(50% + 6px)",
        "left": "calc(1.5px)",
        "top": "calc(1.5px)",
        "width": "calc(50% + 6px)",
      },
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  ":hover .maxi-container-arrow:before": Object {
    "border": Object {
      "general": Object {
        "border-bottom-color": "rgba(var(--maxi-light-color-1), 0.2)",
        "border-bottom-left-radius": "4px",
        "border-bottom-right-radius": "3px",
        "border-bottom-style": "solid",
        "border-bottom-width": "3px",
        "border-left-color": "rgba(var(--maxi-light-color-1), 0.2)",
        "border-left-style": "solid",
        "border-left-width": "4px",
        "border-right-color": "rgba(var(--maxi-light-color-1), 0.2)",
        "border-right-style": "solid",
        "border-right-width": "2px",
        "border-top-color": "rgba(var(--maxi-light-color-1), 0.2)",
        "border-top-left-radius": "1px",
        "border-top-right-radius": "2px",
        "border-top-style": "solid",
        "border-top-width": "1px",
        "left": "-4px",
        "top": "-1px",
      },
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
}
`;
